SFDCProject/src/objects/Partner_Document_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Customer_signature_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer signature required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Classification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Classification</label>
        <referenceTo>Document_Classification__c</referenceTo>
        <relationshipLabel>Partner Document Relationships</relationshipLabel>
        <relationshipName>Partner_Document_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <formula>Document_Classification__r.Document_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Location_Type__c</fullName>
        <label>Partner Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_signature_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner signature required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Ops_signature_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Ops signature required</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Document Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Classification__c</columns>
        <columns>Mode__c</columns>
        <columns>Partner_Type__c</columns>
        <columns>Partner_Location_Type__c</columns>
        <columns>Partner_signature_required__c</columns>
        <columns>SR_Ops_signature_required__c</columns>
        <columns>Mandatory_Document__c</columns>
        <columns>Customer_signature_required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Full_Service_Partners</fullName>
        <columns>NAME</columns>
        <columns>Document_Classification__c</columns>
        <columns>Mandatory_Document__c</columns>
        <columns>Customer_signature_required__c</columns>
        <columns>Partner_signature_required__c</columns>
        <columns>SR_Ops_signature_required__c</columns>
        <columns>Partner_Type__c</columns>
        <columns>Mode__c</columns>
        <columns>Partner_Location_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Type__c</field>
            <operation>contains</operation>
            <value>Full</value>
        </filters>
        <label>Full Service Partners</label>
    </listViews>
    <listViews>
        <fullName>Sales_Only_Docs</fullName>
        <columns>NAME</columns>
        <columns>Document_Classification__c</columns>
        <columns>Mandatory_Document__c</columns>
        <columns>Customer_signature_required__c</columns>
        <columns>Partner_signature_required__c</columns>
        <columns>SR_Ops_signature_required__c</columns>
        <columns>Partner_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Sales</value>
        </filters>
        <label>Sales Only Docs</label>
    </listViews>
    <nameField>
        <label>Partner Document Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Document Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>